--- a/views/Service/website-Tulpo.ejs
+++ b/views/Service/website-Tulpo.ejs
@@ -13,14 +13,13 @@
 	        <div class="page-title-inner container  flex-row  dark is-large" style="min-height: 300px">
 	            <div class="flex-col flex-center text-center">
 	                <h6 class="entry-category is-xsmall"> <a href="https://devteam.mobi/chuyen-muc/dich-vu/" rel="category tag">Dịch vụ</a></h6>
-	                <h1 class="entry-title">Thiết Kế Website Chuyên Nghiệp</h1>
+	                <h1 class="entry-title"><%= service_header %></h1>
 	                <div class="entry-divider is-divider small"></div>
-	                <div class="entry-meta uppercase is-xsmall"> <span class="posted-on dev">Ngày Đăng <time class="entry-date published" datetime="2019-01-17T02:16:58+07:00">17 Tháng Một, 2019</time><time class="updated" datetime="2019-09-03T14:51:01+07:00">3 Tháng Chín, 2019</time></span><span class="byline"> by <span class="meta-author vcard">Thanh Thanh</span></span>
 	                </div>
 	            </div>
 	        </div>
 	    </div>
-	    <main id="main" class="">
+	    <!-- <main id="main" class="">
 	        <div id="content" class="blog-wrapper blog-single page-wrapper">
 	            <div class="row row-large row-divided ">
 	                <div class="large-9 col">
@@ -558,7 +557,7 @@
 		        </div>
 	        	</div>
 	        </div>
-	    </main>
+	    </main> -->
 	    <%- include("./../layout/footer"); -%>
     </div>
     <%- include("./../layout/hotline"); -%>
