--- a/views/customer-Tulpo.ejs
+++ b/views/customer-Tulpo.ejs
@@ -1,7 +1,7 @@
 <%- include("./layout/layout-header"); -%>
 <body class="archive post-type-archive post-type-archive-khach-hang full-width lightbox lazy-icons nav-dropdown-has-arrow">
     <%- include("./layout/contact-sidebar"); -%>
-    <a class="skip-link screen-reader-text" href="https://devteam.mobi/khach-hang/#main">Skip to content</a>
+    <a class="skip-link screen-reader-text" href="https://tulpo.dev/customer/#main">Skip to content</a>
     <div id="wrapper">
         <%- include("./layout/header"); -%>
         <main id="main" class="">
@@ -16,7 +16,7 @@
             <div class="row">
                 <div class="col medium-6 small-12 large-6 customer_style" data-animate="fadeInUp" data-animated="true">
                     <div class="col-inner">
-                        <a href="https://devteam.mobi/khach-hang/sieu-thi-oto-di-an/" class="plain" title="Siêu Thị Ôtô Dĩ An">
+                        <a href="#" class="plain" title="Siêu Thị Ôtô Dĩ An">
                             <div class="box box-text-bottom box-blog-post has-hover">
                                 <div class="box-image">
                                     <div class="image-cover" style="padding-top:56%;"> <img width="300" height="225" src="./../assets/haeva.png" class="attachment-medium size-medium wp-post-image lazy-load-active" alt="Siêu Thị Ôtô Dĩ An" style="border: 1px solid #f3f0f0;padding: 10px;max-width:240px;margin:auto;"></div>
@@ -32,7 +32,7 @@
                 </div>
                 <div class="col medium-6 small-12 large-6 customer_style" data-animate="fadeInUp" data-animated="true">
                     <div class="col-inner">
-                        <a href="https://devteam.mobi/khach-hang/cong-ty-quoc-te-haeva/" class="plain" title="Công Ty Quốc Tế Haeva">
+                        <a href="#" class="plain" title="Công Ty Quốc Tế Haeva">
                             <div class="box box-text-bottom box-blog-post has-hover">
                                 <div class="box-image">
                                     <div class="image-cover" style="padding-top:56%;"> <img width="300" height="225" src="./../assets/haeva.png" class="attachment-medium size-medium wp-post-image lazy-load-active" alt="Công Ty Quốc Tế Haeva" style="border: 1px solid #f3f0f0;padding: 10px;max-width:240px;margin:auto;"></div>
@@ -48,7 +48,7 @@
                 </div>
                 <div class="col medium-6 small-12 large-6 customer_style" data-animate="fadeInUp" data-animated="true">
                     <div class="col-inner">
-                        <a href="https://devteam.mobi/khach-hang/rao-vat-mua-ban-xe/" class="plain" title="Rao Vặt Mua Xe Bán Xe">
+                        <a href="#" class="plain" title="Rao Vặt Mua Xe Bán Xe">
                             <div class="box box-text-bottom box-blog-post has-hover">
                                 <div class="box-image">
                                     <div class="image-cover" style="padding-top:56%;"> <img width="300" height="225" src="./../assets/haeva.png" class="attachment-medium size-medium wp-post-image lazy-load-active" alt="Rao Vặt Mua Xe Bán Xe" style="border: 1px solid #f3f0f0;padding: 10px;max-width:240px;margin:auto;"></div>
@@ -64,7 +64,7 @@
                 </div>
                 <div class="col medium-6 small-12 large-6 customer_style" data-animate="fadeInUp" data-animated="true">
                     <div class="col-inner">
-                        <a href="https://devteam.mobi/khach-hang/trung-tam-thuong-mai-saigon-centre/" class="plain" title="Trung tâm thương mại Saigon Centre">
+                        <a href="#" class="plain" title="Trung tâm thương mại Saigon Centre">
                             <div class="box box-text-bottom box-blog-post has-hover">
                                 <div class="box-image">
                                     <div class="image-cover" style="padding-top:56%;"> <img width="300" height="225" src="./../assets/haeva.png" class="attachment-medium size-medium wp-post-image lazy-load-active" alt="Trung tâm thương mại Saigon Centre" style="border: 1px solid #f3f0f0;padding: 10px;max-width:240px;margin:auto;"></div>
@@ -80,7 +80,7 @@
                 </div>
                 <div class="col medium-6 small-12 large-6 customer_style" data-animate="fadeInUp" data-animated="true">
                     <div class="col-inner">
-                        <a href="https://devteam.mobi/khach-hang/chuoi-lam-dep-elodie-tai-my/" class="plain" title="Chuỗi làm đẹp ELodie tại Mỹ">
+                        <a href="#" class="plain" title="Chuỗi làm đẹp ELodie tại Mỹ">
                             <div class="box box-text-bottom box-blog-post has-hover">
                                 <div class="box-image">
                                     <div class="image-cover" style="padding-top:56%;"> <img width="300" height="225" src="./../assets/haeva.png" class="attachment-medium size-medium wp-post-image lazy-load-active" alt="Chuỗi làm đẹp ELodie tại Mỹ" style="border: 1px solid #f3f0f0;padding: 10px;max-width:240px;margin:auto;"></div>
@@ -96,7 +96,7 @@
                 </div>
                 <div class="col medium-6 small-12 large-6 customer_style" data-animate="fadeInUp" data-animated="true">
                     <div class="col-inner">
-                        <a href="https://devteam.mobi/khach-hang/cong-ty-co-phan-dau-tu-bat-dong-san-thoi-dai-land/" class="plain" title="Công ty Cổ phần Đầu Tư Bất Động Sản Thời Đại Land">
+                        <a href="#" class="plain" title="Công ty Cổ phần Đầu Tư Bất Động Sản Thời Đại Land">
                             <div class="box box-text-bottom box-blog-post has-hover">
                                 <div class="box-image">
                                     <div class="image-cover" style="padding-top:56%;"> <img width="300" height="225" src="./../assets/haeva.png" class="attachment-medium size-medium wp-post-image lazy-load-active" alt="Công ty Cổ phần Đầu Tư Bất Động Sản Thời Đại Land" style="border: 1px solid #f3f0f0;padding: 10px;max-width:240px;margin:auto;"></div>
@@ -112,7 +112,7 @@
                 </div>
                 <div class="col medium-6 small-12 large-6 customer_style" data-animate="fadeInUp" data-animated="true">
                     <div class="col-inner">
-                        <a href="https://devteam.mobi/khach-hang/cong-ty-tnhh-dien-may-aqua/" class="plain" title="Công ty TNHH điện máy AQUA">
+                        <a href="#" class="plain" title="Công ty TNHH điện máy AQUA">
                             <div class="box box-text-bottom box-blog-post has-hover">
                                 <div class="box-image">
                                     <div class="image-cover" style="padding-top:56%;"> <img width="300" height="225" src="./../assets/haeva.png" class="attachment-medium size-medium wp-post-image lazy-load-active" alt="Công ty TNHH điện máy AQUA" style="border: 1px solid #f3f0f0;padding: 10px;max-width:240px;margin:auto;"></div>
@@ -128,7 +128,7 @@
                 </div>
                 <div class="col medium-6 small-12 large-6 customer_style" data-animate="fadeInUp" data-animated="true">
                     <div class="col-inner">
-                        <a href="https://devteam.mobi/khach-hang/cong-ty-tnhh-tm-dv-dong-hung-citimart/" class="plain" title="Công ty TNHH TM DV Đông Hưng (CITIMART)">
+                        <a href="#" class="plain" title="Công ty TNHH TM DV Đông Hưng (CITIMART)">
                             <div class="box box-text-bottom box-blog-post has-hover">
                                 <div class="box-image">
                                     <div class="image-cover" style="padding-top:56%;"> <img width="300" height="225" src="./../assets/haeva.png" class="attachment-medium size-medium wp-post-image lazy-load-active" alt="Công ty TNHH TM DV Đông Hưng (CITIMART)" style="border: 1px solid #f3f0f0;padding: 10px;max-width:240px;margin:auto;"></div>
@@ -150,7 +150,7 @@
     <div class="block-profile-capacity"> 
         <img class="icon-doc" src="./../assets/file.svg"> 
         <img class="icon-devteam" src="./../assets/devteam-logo.svg"> 
-        <a href="https://devteam.mobi/ho-so-nang-luc-devteam.pdf" target="_blank" class="link-sub"></a>
+        <a href="#" target="_blank" class="link-sub"></a>
     </div>
     <%- include("./layout/sidebar"); -%>
     <!-- <%- include("./layout/fb-login"); -%> -->
