--- a/views/layout/footer.ejs
+++ b/views/layout/footer.ejs
@@ -27,23 +27,20 @@
                                 <div class="img-inner dark" style="margin:0px 0px 0px 0px;"> <img src="./../assets/tulpo-logo-web.png" class="attachment-large size-large" alt="" style="height:98.74px!important;width:100px!important;"></div>
                             </div>
                         </div>
-                        <h4 class="color-white">Công ty TNHH giải pháp phần mềm</h4>
+                        <h6 class="color-white">Công ty TNHH giải pháp phần mềm</h6>
                     </div>
                 </div>
             </div>
             <div class="row" id="row-870961340">
                 <div class="col logo-bottom medium-4 small-12 large-4">
                     <div class="col-inner">
-                        <h3 class="uppercase color-red">Tulpo</h3>
-                        <div class="img has-hover x md-x lg-x y md-y lg-y" id="image_408848299">
-                            <div class="img-inner dark"> <img src="./../assets/ft_icon_line.svg" class="attachment-large size-large" alt="" height="3" width="162"></div>
-                        </div>
+                        <h5 class="uppercase color-red">Tulpo</h5>
                         <div class="row" id="row-1185170378">
                             <div class="col small-12 large-12">
                                 <div class="col-inner" style="margin:0px 0px 0 0px;">
                                     <ul class="size-18 list-footer-email" style="padding-left: 5px;">
                                         <li><span class="color-white">Email</span>
-                                            <p class="size-18"><a rel="nofollow" href="mailto:info@devteam.mobi">info@tulpo.vn</a></p>
+                                            <p class="size-18"><a rel="nofollow" href="mailto:info@tulpo.dev">info@tulpo.vn</a></p>
                                         </li>
                                     </ul>
                                     <ul class="size-18 list-footer-address" style="padding-left: 5px;">
@@ -57,13 +54,6 @@
                                                     rel="nofollow" href="tel:0866068861">0866.068.861</a></p>
                                         </li>
                                     </ul>
-                                    <ul>
-                                        <li style="list-style: none;">
-                                            <p style="display: block; margin-top: 10px;"><a rel="nofollow" class="dmca-badge" title="DMCA.com Protection Status" href="https://www.dmca.com/Protection/Status.aspx?ID=6e34da3c-0d5f-4de1-9608-99ca06314860&amp;refurl=https://devteam.mobi/"> <img src="./../assets/dmca-badge-w150-5x1-01.png" alt="DMCA.com Protection Status"></a>
-                                                <script src="./../assets/DMCABadgeHelper.min.js"></script>
-                                            </p>
-                                        </li>
-                                    </ul>
                                 </div>
                             </div>
                         </div>
@@ -71,10 +61,7 @@
                 </div>
                 <div class="col medium-4 small-12 large-4">
                     <div class="col-inner">
-                        <h3 class="uppercase color-red">Doanh Nghiệp</h3>
-                        <div class="img has-hover x md-x lg-x y md-y lg-y" id="image_1116861828">
-                            <div class="img-inner dark"> <img src="./../assets/ft_icon_line.svg" class="attachment-large size-large" alt="" height="3" width="162"></div>
-                        </div>
+                        <h5 class="uppercase color-red">Doanh Nghiệp</h5>
                         <div class="row" id="row-1747552391">
                             <div class="col small-12 large-12">
                                 <div class="col-inner" style="margin:0px 0px 0 0px;">
@@ -96,10 +83,7 @@
                 </div>
                 <div class="col medium-4 small-12 large-4">
                     <div class="col-inner">
-                        <h3 class="uppercase color-red">Liên kết</h3>
-                        <div class="img has-hover x md-x lg-x y md-y lg-y" id="image_581909903">
-                            <div class="img-inner dark"> <img src="./../assets/ft_icon_line.svg" class="attachment-large size-large" alt="" height="3" width="162"></div>
-                        </div>
+                        <h5 class="uppercase color-red">Liên kết</h5>
                         <div class="row" id="row-1008360503">
                             <div class="col small-12 large-12">
                                 <div class="col-inner" style="margin:0px 0px 0 0px;">
