--- a/views/layout/layout-footer.ejs
+++ b/views/layout/layout-footer.ejs
@@ -1,3 +1,5 @@
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
 <script>
     jQuery('.showfomrmmail').click(function (e) {
         e.preventDefault();
@@ -11,6 +13,9 @@
             jQuery('.wp-form-show-phone').removeClass('active');
             $(this).removeClass('overlays');
         });
+    });
+    jQuery('.carousel.carousel-slider').carousel({
+        fullWidth: true
     });
 </script>
 <div class="sidebar-footer"><span class="hidden" style="display:none"></span></div>
@@ -90,5 +95,6 @@
 </script>
 <script type="text/javascript" defer="" src="./../assets/autoptimize_3c7a2ff5eab1e6e2bdd95045c7aa7170.js"></script>
 <img src="./../assets/g.gif" alt=":)" width="6" height="5" id="wpstats">
+<!-- Compiled and minified JavaScript -->
 </body>
 </html>
