--- a/views/layout/layout-header.ejs
+++ b/views/layout/layout-header.ejs
@@ -149,6 +149,10 @@
     <link rel="stylesheet" type="text/css" href="./../assets/9r16g(1).css" media="all">
     <link rel="stylesheet" href="./../assets/owl.carousel.min.css">
     <link rel="stylesheet" href="./../style1.css">
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
+    
 
     <script type="application/ld+json">
         {
