--- a/public/style.css
+++ b/public/style.css
@@ -3290,6 +3290,10 @@ body.boxed .is-sticky-section {
     background-color: #666
 }
 
+section#section_1969830485 {
+    padding: 100px;
+}
+
 .section-bg {
     overflow: hidden
 }
@@ -13332,13 +13336,13 @@ html {
 }
 
 .img-tes {
-    background-image: url(https://devteam.mobi/wp-content/uploads/2019/03/ts_img_cetner.svg);
+    background-image: url(./../assets/custom-talk.jpg);
     background-position: center;
     background-repeat: no-repeat;
     height: 100%;
     padding: 30px 0;
     height: 447px;
-    padding-top: 0
+    padding-top: 0;
 }
 
 .img-tes .flickity-page-dots {
