--- a/views/About/about-Tulpo.ejs
+++ b/views/About/about-Tulpo.ejs
@@ -144,9 +144,9 @@
 	                        <div class="col medium-6 small-12 large-6">
 	                            <div class="col-inner box-shadow-2 box-shadow-5-hover" style="background-color:rgb(255, 255, 255);padding:15px 15px 15px 15px;">
 	                                <div class="img has-hover x md-x lg-x y md-y lg-y" id="image_246295231">
-	                                    <div class="img-inner dark"> <img width="640" height="427" src="./../../assets/about-5.jpg" data-src="./../../assets/about-5.jpg" class="attachment-large size-large lazy-load-active"
-	                                            alt="" srcset="./../../assets/about-5.jpg 640w, ./../../assets/about-5.jpg 300w, ./../../assets/about-5.jpg 600w"
-	                                            data-srcset="./../../assets/about-5.jpg 640w, ./../../assets/about-5.jpg 300w, ./../../assets/about-5.jpg 600w"
+	                                    <div class="img-inner dark"> <img width="640" height="427" src="./../../assets/about-5.png" data-src="./../../assets/about-5.png" class="attachment-large size-large lazy-load-active"
+	                                            alt="" srcset="./../../assets/about-5.png 640w, ./../../assets/about-5.png 300w, ./../../assets/about-5.png 600w"
+	                                            data-srcset="./../../assets/about-5.png 640w, ./../../assets/about-5.png 300w, ./../../assets/about-5.png 600w"
 	                                            sizes="(max-width: 640px) 100vw, 640px"></div>
 	                                </div>
 	                            </div>
