--- a/views/home-Tulpo.ejs
+++ b/views/home-Tulpo.ejs
@@ -284,9 +284,12 @@
 												<img src="https://lorempixel.com/800/400/food/2" style="width: 100px; height: 100px; border-radius:50%; border: 2px solid rgba(1, 1, 97, 0.199)">
 											</div>
 											<div style="background: rgba(128, 128, 128, 0);padding: 10px 50px; margin-left: 50px; margin-top:50px; border-radius: 20px; box-shadow: grey 1px 4px 1px 1px;">
-												<h5 style="text-align: center;"><strong>- JOHN NGUYEN -</strong></h5>
-												<p style="font-weight: 600; color: grey;"><i>"Dù mới hợp tác lần đầu, nhưng tác phong làm việc của các bạn luôn khiến tôi hài lòng. Sự chuyên nghiệp, tận tâm của các bạn cũng là điều mà tôi nên học hỏi. Sẽ không chỉ là một app mobile, mà trong tương lai, tôi chắc chắn sẽ tìm đến và hợp tác với Tulpo ở những dự án lớn khác."</i></p>
-												<div style="font-size: 18px; color: rgb(2, 2, 104); text-align: right; font-weight: 600;">John Nguyen</div>
+												<h5 style="text-align: center;"><strong>- CEO CÔNG TY DIGITAL MARKETING NINJA -</strong></h5>
+												<p style="font-weight: 600; color: grey;"><i>"Đã hợp tác với TulPo 3 lần. Có một điều mình cảm
+													thấy khá hài lòng đó là sự nhiệt tình và tư duy sáng
+													tạo, tư vấn làm và nâng cấp sản phẩm rất logic. Hứa
+													hẹn sẽ hợp tác nhiều trong tương lai."</i></p>
+												<div style="font-size: 18px; color: rgb(2, 2, 104); text-align: right; font-weight: 600;">Đặng Mạnh Dũng</div>
 											</div>
 										</div>
 									</a>
@@ -296,9 +299,12 @@
 												<img src="https://lorempixel.com/800/400/food/2" style="width: 100px; height: 100px; border-radius:50%; border: 2px solid rgba(1, 1, 97, 0.199)">
 											</div>
 											<div style="background: rgba(128, 128, 128, 0);padding: 10px 50px; margin-left: 50px; margin-top:50px; border-radius: 20px; box-shadow: grey 1px 4px 1px 1px;">
-												<h5 style="text-align: center;"><strong>- JOHN NGUYEN -</strong></h5>
-												<p style="font-weight: 600; color: grey;"><i>"Dù mới hợp tác lần đầu, nhưng tác phong làm việc của các bạn luôn khiến tôi hài lòng. Sự chuyên nghiệp, tận tâm của các bạn cũng là điều mà tôi nên học hỏi. Sẽ không chỉ là một app mobile, mà trong tương lai, tôi chắc chắn sẽ tìm đến và hợp tác với Tulpo ở những dự án lớn khác."</i></p>
-												<div style="font-size: 18px; color: rgb(2, 2, 104); text-align: right; font-weight: 600;">John Nguyen</div>
+												<h5 style="text-align: center;"><strong>- CEO CÔNG TY TNHH THIẾT BỊ CÔNG NGHIỆP AKIKO -</strong></h5>
+												<p style="font-weight: 600; color: grey;"><i>"Chưa biết tương lai TulPo mở rộng phát triển sang
+													mảng nào nữa không. Mình rất muốn mọi thứ công
+													nghệ bên mình do bên TulPo đảm nhiệm vì qua
+													những lần hợp tác thì thấy TulPo rất chuyên nghiệp."</i></p>
+												<div style="font-size: 18px; color: rgb(2, 2, 104); text-align: right; font-weight: 600;">Nguyễn Hoàng</div>
 											</div>
 										</div>
 									</a>
@@ -308,9 +314,12 @@
 												<img src="https://lorempixel.com/800/400/food/2" style="width: 100px; height: 100px; border-radius:50%; border: 2px solid rgba(1, 1, 97, 0.199)">
 											</div>
 											<div style="background: rgba(128, 128, 128, 0);padding: 10px 50px; margin-left: 50px; margin-top:50px; border-radius: 20px; box-shadow: grey 1px 4px 1px 1px;">
-												<h5 style="text-align: center;"><strong>- JOHN NGUYEN -</strong></h5>
-												<p style="font-weight: 600; color: grey;"><i>"Dù mới hợp tác lần đầu, nhưng tác phong làm việc của các bạn luôn khiến tôi hài lòng. Sự chuyên nghiệp, tận tâm của các bạn cũng là điều mà tôi nên học hỏi. Sẽ không chỉ là một app mobile, mà trong tương lai, tôi chắc chắn sẽ tìm đến và hợp tác với Tulpo ở những dự án lớn khác."</i></p>
-												<div style="font-size: 18px; color: rgb(2, 2, 104); text-align: right; font-weight: 600;">John Nguyen</div>
+												<h5 style="text-align: center;"><strong>- CTO IZICHAIN -</strong></h5>
+												<p style="font-weight: 600; color: grey;"><i>"Tôi là CEO của một công ty công nghệ gia công mảng
+													Web/App. Và TulPo là đối tác của chúng tôi trong
+													mảng Blockchain và Bot. TulPo là một đột ngũ rất
+													sáng tạo trong công việc."</i></p>
+												<div style="font-size: 18px; color: rgb(2, 2, 104); text-align: right; font-weight: 600;">Trần Thanh Tùng</div>
 											</div>
 										</div>
 									</a>
@@ -328,7 +337,7 @@
 	                        <div class="col-inner">
 	                            <div class="img has-hover x md-x lg-x y md-y lg-y" id="image_514318783">
 	                                <div data-animate="fadeInLeft">
-	                                    <div class="img-inner image-cover dark" style="padding-top:75%;"> <img src="./../assets/tulpo-great.jpg" class="attachment-large size-large" alt="" height="443.82" width="504.6"></div>
+	                                    <div class="img-inner image-cover dark" style="padding-top:75%;"> <img src="./../assets/tulpo-great.png" class="attachment-large size-large" alt="" height="443.82" width="504.6"></div>
 	                                </div>
 	                            </div>
 	                        </div>
