--- a/views/layout/footer.ejs
+++ b/views/layout/footer.ejs
@@ -66,15 +66,15 @@
                             <div class="col small-12 large-12">
                                 <div class="col-inner" style="margin:0px 0px 0 0px;">
                                     <ul class="size-18 list-footer" style="padding-left: 5px;">
-                                        <li><a href="/service/website">Chatbot/Bot</a></li>
-                                        <li><a href="/service/mobile">Tool</a></li>
-                                        <li><a href="/service/company">Blockchain Platform</a></li>
-                                        <li><a href="/service/erp">Sàn giao dịch</a></li>
-                                        <li><a href="/service/crm">Market Maker</a></li>
-                                        <li><a href="/service/crm">Cổng thanh toán tự động</a></li>
-                                        <li><a href="/service/crm">Ví điện tử</a></li>
-                                        <li><a href="/service/crm">Website đa tầng</a></li>
-                                        <li><a href="/service/crm">Bounty/Airdrop</a></li>
+                                        <li><a href="/service/bot-chatbot">Chatbot/Bot</a></li>
+                                        <li><a href="/service/tool">Tool</a></li>
+                                        <li><a href="/service/blockchain">Blockchain Platform</a></li>
+                                        <li><a href="/service/wallet">Sàn giao dịch</a></li>
+                                        <li><a href="/service/exchange">Market Maker</a></li>
+                                        <li><a href="/service/pay-gate">Cổng thanh toán tự động</a></li>
+                                        <li><a href="/service/market-maker">Ví điện tử</a></li>
+                                        <li><a href="/service/website-mlm">Website đa tầng</a></li>
+                                        <li><a href="/service/bounty-airdrop">Bounty/Airdrop</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -93,7 +93,7 @@
                                         <li><a rel="nofollow" href="/service">Dịch vụ</a></li>
                                         <li><a rel="nofollow" href="/news">Tin tức</a></li>
                                         <li><a rel="nofollow" href="/price">Báo giá</a></li>
-                                        <li><a rel="nofollow" href="/customer">Các sản phẩm</a></li>
+                                        <li><a rel="nofollow" href="/product">Các sản phẩm</a></li>
                                         <li><a rel="nofollow" href="/contact">Liên hệ</a></li>
                                     </ul>
                                 </div>
