--- a/views/layout/sidebar.ejs
+++ b/views/layout/sidebar.ejs
@@ -19,15 +19,15 @@
             <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-8575 current_page_item menu-item-10205"><a href="/" class="nav-top-link">Trang chủ</a></li>
             <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-has-children menu-item-5717 has-child" aria-expanded="false"><a href="/service" class="nav-top-link">Dịch vụ</a><button class="toggle"><i class="icon-angle-down"></i></button>
                 <ul class="children">
-                    <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-22004"><a target="_blank" href="/service/website">BOT / Chatbot</a></li>
-                    <li class="menu-item menu-item-type-post_type menu-item-object-post menu-item-18104"><a target="_blank" href="/service/mobile">Tool</a></li>
-                    <li class="menu-item menu-item-type-post_type menu-item-object-post menu-item-23792"><a target="_blank" href="/service/call-service">HBlockchain Platform</a></li>
-                    <li class="menu-item menu-item-type-post_type menu-item-object-post menu-item-23857"><a target="_blank" href="/service/nail">Ví Điện Tử</a></li>
-                    <li class="menu-item menu-item-type-post_type menu-item-object-post menu-item-17725"><a target="_blank" href="/service/company">Sàn Giao Dịch</a></li>
-                    <li class="menu-item menu-item-type-post_type menu-item-object-post menu-item-17726"><a target="_blank" href="/service/erp">Cổng Thanh Toán</a></li>
-                    <li class="menu-item menu-item-type-post_type menu-item-object-post menu-item-17727"><a target="_blank" href="/service/crm">Market Maker</a></li>
-                    <li class="menu-item menu-item-type-post_type menu-item-object-post menu-item-17726"><a target="_blank" href="/service/erp">Website Đa Tầng</a></li>
-                    <li class="menu-item menu-item-type-post_type menu-item-object-post menu-item-17727"><a target="_blank" href="/service/crm">Bounty / Airdrop</a></li>
+                    <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-22004"><a target="_blank" href="/service/bot-chatbot">BOT / Chatbot</a></li>
+                    <li class="menu-item menu-item-type-post_type menu-item-object-post menu-item-18104"><a target="_blank" href="/service/tool">Tool</a></li>
+                    <li class="menu-item menu-item-type-post_type menu-item-object-post menu-item-23792"><a target="_blank" href="/service/blockchain">HBlockchain Platform</a></li>
+                    <li class="menu-item menu-item-type-post_type menu-item-object-post menu-item-23857"><a target="_blank" href="/service/wallet">Ví Điện Tử</a></li>
+                    <li class="menu-item menu-item-type-post_type menu-item-object-post menu-item-17725"><a target="_blank" href="/service/exchange">Sàn Giao Dịch</a></li>
+                    <li class="menu-item menu-item-type-post_type menu-item-object-post menu-item-17726"><a target="_blank" href="/service/pay-gate">Cổng Thanh Toán</a></li>
+                    <li class="menu-item menu-item-type-post_type menu-item-object-post menu-item-17727"><a target="_blank" href="/service/market-maker">Market Maker</a></li>
+                    <li class="menu-item menu-item-type-post_type menu-item-object-post menu-item-17726"><a target="_blank" href="/service/website-mlm">Website Đa Tầng</a></li>
+                    <li class="menu-item menu-item-type-post_type menu-item-object-post menu-item-17727"><a target="_blank" href="/service/bounty-airdrop">Bounty / Airdrop</a></li>
                 </ul>
             </li>
             <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-3583 has-child" aria-expanded="false"><a rel="nofollow" href="#" class="nav-top-link">Về chúng tôi</a><button class="toggle"><i class="icon-angle-down"></i></button>
@@ -39,7 +39,7 @@
                     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3539"><a rel="nofollow" href="/about/contact">Liên hệ</a></li>
                 </ul>
             </li>
-            <li class="menu-item menu-item-type-post_type_archive menu-item-object-khach-hang menu-item-8114"><a rel="nofollow" href="/customer" class="nav-top-link">Sản phẩm</a></li>
+            <li class="menu-item menu-item-type-post_type_archive menu-item-object-khach-hang menu-item-8114"><a rel="nofollow" href="/product" class="nav-top-link">Sản phẩm</a></li>
             <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-14091"><a rel="nofollow" href="/price" class="nav-top-link">Báo Giá</a></li>
             <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-20307"><a href="/news" class="nav-top-link">Tin tức</a></li>
         </ul>
