--- a/views/price-Tulpo.ejs
+++ b/views/price-Tulpo.ejs
@@ -102,7 +102,7 @@
 															<legend>Ngân sách ước tính</legend>
 															<p> 
 																<span class="wpcf7-form-control-wrap menu-606">
-																	<select name="menu-606" class="wpcf7-form-control wpcf7-select" aria-invalid="false">
+																	<select id="select-price" name="menu-606" class="wpcf7-form-control wpcf7-select" aria-invalid="false">
 																		<option value="&lt; 50 triệu">&lt; $2000</option>
 																		<option value="50 triệu - 100 triệu">$2000 -$5000</option>
 																		<option value="100 triệu - 300 triệu">$5000- $15000</option>
@@ -120,7 +120,7 @@
 															<legend>Thời gian có thể gọi lại</legend>
 															<p> 
 																<span class="wpcf7-form-control-wrap menu-653">
-																	<select name="menu-653" class="wpcf7-form-control wpcf7-select chose-call" aria-invalid="false">
+																	<select id="select-price" name="menu-653" class="wpcf7-form-control wpcf7-select chose-call" aria-invalid="false">
 																		<option value="Gọi lại cho tôi ngay">Gọi lại cho tôi ngay</option>
 																		<option value="Gọi cho tôi sau giờ hành chính">Gọi cho tôi sau giờ hành chính</option>
 																	</select>
