--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -17,15 +17,15 @@
                         <li id="menu-item-10205" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-8575 current_page_item active  menu-item-10205"><a href="/" class="nav-top-link">Trang chủ</a></li>
                         <li id="menu-item-5717" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-has-children menu-item-5717 has-dropdown"><a href="/service" class="nav-top-link">Dịch vụ<i class="fas fa-angle-down"></i></a>
                             <ul class="nav-dropdown nav-dropdown-default">
-                                <li id="menu-item-22004" class="menu-item menu-item-type-custom menu-item-object-custom  menu-item-22004"><a target="_blank" href="/service/website">BOT/Chatbot</a></li>
-                                <li id="menu-item-18104" class="menu-item menu-item-type-post_type menu-item-object-post  menu-item-18104"><a target="_blank" href="/service/mobile">Tool</a></li>
-                                <li id="menu-item-23792" class="menu-item menu-item-type-post_type menu-item-object-post  menu-item-23792"><a target="_blank" href="/service/call-service">Blockchain Platform</a></li>
-                                <li id="menu-item-23857" class="menu-item menu-item-type-post_type menu-item-object-post  menu-item-23857"><a href="/service/nail">Ví điện tử</a></li>
-                                <li id="menu-item-17725" class="menu-item menu-item-type-post_type menu-item-object-post  menu-item-17725"><a target="_blank" href="/service/company">Sàn giao dịch</a></li>
-                                <li id="menu-item-17726" class="menu-item menu-item-type-post_type menu-item-object-post  menu-item-17726"><a target="_blank" href="/service/erp">Cổng thanh toán</a></li>
-                                <li id="menu-item-17727" class="menu-item menu-item-type-post_type menu-item-object-post  menu-item-17727"><a target="_blank" href="/service/crm">Market Maker</a></li>
-                                <li id="menu-item-17727" class="menu-item menu-item-type-post_type menu-item-object-post  menu-item-17727"><a target="_blank" href="/service/crm">Website đa tầng</a></li>
-                                <li id="menu-item-17727" class="menu-item menu-item-type-post_type menu-item-object-post  menu-item-17727"><a target="_blank" href="/service/crm">Bounty / Airdrop</a></li>
+                                <li id="menu-item-22004" class="menu-item menu-item-type-custom menu-item-object-custom  menu-item-22004"><a target="_blank" href="/service/bot-chatbot">BOT/Chatbot</a></li>
+                                <li id="menu-item-18104" class="menu-item menu-item-type-post_type menu-item-object-post  menu-item-18104"><a target="_blank" href="/service/tool">Tool</a></li>
+                                <li id="menu-item-23792" class="menu-item menu-item-type-post_type menu-item-object-post  menu-item-23792"><a target="_blank" href="/service/blockchain">Blockchain Platform</a></li>
+                                <li id="menu-item-23857" class="menu-item menu-item-type-post_type menu-item-object-post  menu-item-23857"><a href="/service/wallet">Ví điện tử</a></li>
+                                <li id="menu-item-17725" class="menu-item menu-item-type-post_type menu-item-object-post  menu-item-17725"><a target="_blank" href="/service/exchange">Sàn giao dịch</a></li>
+                                <li id="menu-item-17726" class="menu-item menu-item-type-post_type menu-item-object-post  menu-item-17726"><a target="_blank" href="/service/pay-gate">Cổng thanh toán</a></li>
+                                <li id="menu-item-17727" class="menu-item menu-item-type-post_type menu-item-object-post  menu-item-17727"><a target="_blank" href="/service/market-maker">Market Maker</a></li>
+                                <li id="menu-item-17727" class="menu-item menu-item-type-post_type menu-item-object-post  menu-item-17727"><a target="_blank" href="/service/website-mlm">Website đa tầng</a></li>
+                                <li id="menu-item-17727" class="menu-item menu-item-type-post_type menu-item-object-post  menu-item-17727"><a target="_blank" href="/service/bounty-airdrop">Bounty / Airdrop</a></li>
                             </ul>
                         </li>
                         <li id="menu-item-3583" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children  menu-item-3583 has-dropdown"><a rel="nofollow" href="#" class="nav-top-link">Về chúng tôi<i class="fas fa-angle-down"></i></a>
@@ -37,7 +37,7 @@
                                 <li id="menu-item-3539" class="menu-item menu-item-type-post_type menu-item-object-page  menu-item-3539"><a rel="nofollow" href="/about/contact">Liên hệ</a></li>
                             </ul>
                         </li>
-                        <li id="menu-item-20307" class="menu-item menu-item-type-post_type menu-item-object-page  menu-item-20307"><a href="/customer" class="nav-top-link">Sản Phẩm</a></li>
+                        <li id="menu-item-20307" class="menu-item menu-item-type-post_type menu-item-object-page  menu-item-20307"><a href="/product" class="nav-top-link">Sản Phẩm</a></li>
                         <li id="menu-item-8114" class="menu-item menu-item-type-post_type_archive menu-item-object-khach-hang  menu-item-8114"><a rel="nofollow" href="/price" class="nav-top-link">Báo Giá</a></li>
                         <li id="menu-item-14091" class="menu-item menu-item-type-post_type menu-item-object-page  menu-item-14091"><a rel="nofollow" href="/news" class="nav-top-link">Tin tức</a></li>
                        
