--- a/views/layout/layout-header.ejs
+++ b/views/layout/layout-header.ejs
@@ -31,14 +31,14 @@
     <meta property="og:description" content="Tulpo tự tin luôn là sự lựa chọn số 1 cho doanh nghiệp khi cần: thiết kế website, lập trình ứng dụng Mobile, hay giải pháp phần mềm cho doanh nghiệp">
     <meta property="og:url" content="https://tulpo.dev/">
     <meta property="og:site_name" content="Tulpo">
-    <meta property="og:image" content="https://devteam.mobi/wp-content/uploads/2019/04/outsourcing8-min.jpg">
-    <meta property="og:image:secure_url" content="https://devteam.mobi/wp-content/uploads/2019/04/outsourcing8-min.jpg">
+    <meta property="og:image" content="">
+    <meta property="og:image:secure_url" content="">
     <meta property="og:image:width" content="800">
     <meta property="og:image:height" content="450">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:description" content="Công ty phần mềm Tulpo chuyên cung cấp các giải pháp doanh nghiệp như giải pháp ERP, giải pháp quản lý khách hàng CRM, dịch vụ thiết kế website,...">
     <meta name="twitter:title" content="Tulpo - Công Ty Phần Mềm &amp; Thiết Kế Website Chuyên Nghiệp">
-    <meta name="twitter:image" content="https://devteam.mobi/wp-content/uploads/2019/04/outsourcing8-min.jpg">
+    <meta name="twitter:image" content="">
     <meta name="google-site-verification" content="lFwe9qZ6nGBwmhPRU8p0ZxEQYG8r88zII87F-QTDX_o">
     <link rel="stylesheet" type="text/css" href="./../assets/9r16g.css" media="all">
     <script src="./../assets/9r16g.js" type="text/javascript"></script>
@@ -53,23 +53,14 @@
             "edgeY": "0"
         };
     </script>
-    <link rel="https://api.w.org/" href="https://devteam.mobi/wp-json/">
-    <link rel="EditURI" type="application/rsd+xml" title="RSD" href="https://devteam.mobi/xmlrpc.php?rsd">
-    <link rel="wlwmanifest" type="application/wlwmanifest+xml" href="https://devteam.mobi/wp-includes/wlwmanifest.xml">
-    <link rel="shortlink" href="https://wp.me/PaWTJt-2ej">
-    <link rel="alternate" type="application/json+oembed" href="https://devteam.mobi/wp-json/oembed/1.0/embed?url=https%3A%2F%2Fdevteam.mobi%2F">
-    <link rel="alternate" type="text/xml+oembed" href="https://devteam.mobi/wp-json/oembed/1.0/embed?url=https%3A%2F%2Fdevteam.mobi%2F&amp;format=xml">
     <link rel="icon" href="./../favicon.ico" sizes="32x32">
     <link rel="icon" href="./../favicon.ico" sizes="192x192">
     <link rel="apple-touch-icon-precomposed" href="./../favicon.ico">
     <meta name="msapplication-TileImage" content="./../favicon.ico">
     <link rel="stylesheet" type="text/css" href="./../assets/9r16g(1).css" media="all">
     <link rel="stylesheet" href="./../assets/owl.carousel.min.css">
-    <link rel="stylesheet" href="./../style1.css">
     <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link rel="stylesheet" href="./../assets/materialize.min.css">
     <link rel="stylesheet" type="text/css" id="gravatar-card-css" href="./../assets/hovercard.min.css">
-    <link rel="stylesheet" type="text/css" id="gravatar-card-services-css" href="./../assets/services.min.css">
-    <link rel="stylesheet" href="./../style2.css">
-    
+    <link rel="stylesheet" type="text/css" id="gravatar-card-services-css" href="./../assets/services.min.css">    
 </head>
