--- a/views/layout/layout-footer.ejs
+++ b/views/layout/layout-footer.ejs
@@ -1,4 +1,4 @@
-<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+<script src="./../assets/materialize.min.js"></script>
 
 <script>
     jQuery('.showfomrmmail').click(function (e) {
